[package]
name = "imgbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
rusqlite = "0.28"
serde_rusqlite = "0.31"
rand = "*"
env_logger = "*"
log = "*"
chrono = "0.4"
